# USDForMetasequoia

./: .gitignore  LICENSE.txt  Readme.md  Third Party Notices.md
Source/: CMakeLists.txt  MeshUtils.vcxproj  MeshUtils.vcxproj.filters  USDForMetasequoia.bat  USDForMetasequoia.sln  build.bat  install_debug.bat  make_links.bat  mqabcPlayer.vcxproj  mqabcPlayer.vcxproj.filters  mqabcRecorder.vcxproj  mqabcRecorder.vcxproj.filters  mqsdk.vcxproj  mqsdk.vcxproj.filters  mqusdCore.vcxproj  mqusdCore.vcxproj.filters  mqusdCoreExe.vcxproj  mqusdCoreExe.vcxproj.filters  mqusdFoundation.vcxproj  mqusdFoundation.vcxproj.filters  mqusdPlayer.vcxproj  mqusdPlayer.vcxproj.filters  mqusdRecorder.vcxproj  mqusdRecorder.vcxproj.filters  setup.bat  setup.vcxproj  toolchain.bat
Source/MeshUtils/: CMakeLists.txt  MeshUtils.h  MeshUtils.vcxproj  MeshUtilsCore.ispc  NatvisFile.natvis  ispcmath.h  muLimits.h  muMath.cpp  muMath.h  muMisc.cpp  muMisc.h  muRawVector.cpp  muRawVector.h  muSIMD.cpp  muStream.cpp  muStream.h  pch.h
Source/MeshUtils/mudbg/: CMakeLists.txt  muVectorGuard.cpp  mudbg.h  mudbg.vcxproj  pch.h
Source/Plugins/: CMakeLists.txt  mqusd.h
Source/Plugins/mqCommon/: CMakeLists.txt  mqCommon.vcxproj  mqDocumentExporter.cpp  mqDocumentExporter.h  mqDocumentImporter.cpp  mqDocumentImporter.h  mqDummyPlugins.h  mqTWindow.h  mqUtils.cpp  mqUtils.h  mqusdDocumentExporter.cpp  mqusdDocumentExporter.h  mqusdDocumentImporter.cpp  mqusdDocumentImporter.h  pch.h
Source/Plugins/mqabc/: CMakeLists.txt  mqabc.vcxproj  mqabcExportPlugin.cpp  mqabcExportWindow.cpp  mqabcExportWindow.h  mqabcExporterPlugin.cpp  mqabcExporterWindow.cpp  mqabcExporterWindow.h  mqabcImportPlugin.cpp  mqabcImportWindow.cpp  mqabcImportWindow.h  mqabcImporterPlugin.cpp  mqabcImporterWindow.cpp  mqabcImporterWindow.h  mqabcInternal.cpp  mqabcInternal.h  mqabcPlayerWindow.cpp  mqabcPlayerWindow.h  mqabcPlugin.cpp  mqabcPlugin.h  mqabcRecorderPlugin.cpp  mqabcRecorderPlugin.h  mqabcRecorderWindow.cpp  mqabcRecorderWindow.h  mqabcWindow.cpp  mqabcWindow.h
Source/Plugins/mqabcExport/: CMakeLists.txt  mqabcExport.cpp  mqabcExport.vcxproj
Source/Plugins/mqabcExporter/: CMakeLists.txt  mqabcExporter.cpp  mqabcExporter.vcxproj
Source/Plugins/mqabcImport/: CMakeLists.txt  mqabcImport.cpp  mqabcImport.vcxproj
Source/Plugins/mqabcImporter/: CMakeLists.txt  mqabcImporter.cpp  mqabcImporter.vcxproj
Source/Plugins/mqabcRecorder/: CMakeLists.txt  mqabcRecorder.cpp  mqabcRecorder.vcxproj
Source/Plugins/mqsdk/: CMakeLists.txt  mqsdk.vcxproj  sdk_Include.h
Source/Plugins/mqusd/: CMakeLists.txt  mqusd.vcxproj  mqusdExportPlugin.cpp  mqusdExportWindow.cpp  mqusdExportWindow.h  mqusdExporterPlugin.cpp  mqusdExporterWindow.cpp  mqusdExporterWindow.h  mqusdImportPlugin.cpp  mqusdImportWindow.cpp  mqusdImportWindow.h  mqusdImporterPlugin.cpp  mqusdImporterWindow.cpp  mqusdImporterWindow.h  mqusdInternal.cpp  mqusdInternal.h  mqusdPlayerWindow.cpp  mqusdPlayerWindow.h  mqusdPlugin.cpp  mqusdPlugin.h  mqusdRecorderPlugin.cpp  mqusdRecorderPlugin.h  mqusdRecorderWindow.cpp  mqusdRecorderWindow.h  mqusdWindow.cpp  mqusdWindow.h
Source/Plugins/mqusdExport/: CMakeLists.txt  mqusdExport.cpp  mqusdExport.vcxproj
Source/Plugins/mqusdExporter/: CMakeLists.txt  mqusdExporter.cpp  mqusdExporter.vcxproj
Source/Plugins/mqusdImport/: CMakeLists.txt  mqusdImport.cpp  mqusdImport.vcxproj
Source/Plugins/mqusdImporter/: CMakeLists.txt  mqusdImporter.cpp  mqusdImporter.vcxproj
Source/Plugins/mqusdRecorder/: CMakeLists.txt  mqusdRecorder.cpp  mqusdRecorder.vcxproj
Source/SceneGraph/: CMakeLists.txt  SceneGraph.cpp  SceneGraph.h  SceneGraph.vcxproj  SceneGraphRemote.cpp  SceneGraphRemote.h  mqusdSceneGraph.cpp  mqusdSceneGraph.h  mqusdSceneGraphRemote.cpp  mqusdSceneGraphRemote.h  mqusdSerialization.h  mqusdUtils.cpp  mqusdUtils.h  pch.h  sgSerialization.cpp  sgSerialization.h  sgSerializationImpl.h  sgUtils.cpp  sgUtils.h
Source/SceneGraph/ABC/: CMakeLists.txt  SceneGraphABC.vcxproj  mqabc.h  mqabcCore.h  mqabcOSceneGraph.cpp  mqabcOSceneGraph.h  pch.h  sgabc.h  sgabcISceneGraph.cpp  sgabcISceneGraph.h  sgabcInternal.h  sgabcOSceneGraph.cpp  sgabcOSceneGraph.h
Source/SceneGraph/USD/: CMakeLists.txt  SceneGraphUSD.vcxproj  SceneGraphUSDExe.vcxproj  mqusdCore.h  mqusdCoreExe.cpp  mqusdSceneGraphUSD.cpp  mqusdSceneGraphUSD.h  mqusdUtilsUSD.h  pch.h  sgusd.h  sgusdInternal.h  sgusdMain.cpp  sgusdSceneGraph.cpp  sgusdSceneGraph.h  sgusdUtils.cpp  sgusdUtils.h
Source/Scripts/: install_Mac.sh  install_Windows.bat  install_debug.bat
Source/Test/: CMakeLists.txt  Test.vcxproj  Test.vcxproj.filters  TestMeshUtils.cpp  TestSerialization.cpp  pch.h
Source/cmake/: FindAlembic.cmake  FindMetasequoia470.cmake  FindOpenEXR.cmake  FindTBB.cmake  FindUSD.cmake
Source/mqsdk/: mqsdk.vcxproj  pch.h  sdk_Include.h
Source/mqusd/: CMakeLists.txt  mqusd.cpp  mqusd.h  mqusdDocument.cpp  mqusdDocument.h  mqusdMesh.cpp  mqusdMesh.h  mqusdNode.cpp  mqusdNode.h  mqusdNodeInternal.cpp  mqusdNodeInternal.h  mqusdSceneGraph.cpp  mqusdSceneGraph.h  pch.h
Source/mqusd/ABCCore/: CMakeLists.txt  mqabc.h  mqabcCore.h  mqabcISceneGraph.cpp  mqabcISceneGraph.h  mqabcOSceneGraph.cpp  mqabcOSceneGraph.h
Source/mqusd/ABCPlayer/: mqabcPlayerPlugin.cpp  mqabcPlayerPlugin.h  mqabcPlayerWindow.cpp  mqabcPlayerWindow.h  mqabcRecorderWindow.cpp  mqabcRecorderWindow.h
Source/mqusd/ABCRecorder/: CMakeLists.txt  mqabcRecorderPlugin.cpp  mqabcRecorderPlugin.h  mqabcRecorderWindow.cpp  mqabcRecorderWindow.h
Source/mqusd/Core/: CMakeLists.txt  mqusdCore.cpp  mqusdCore.h  mqusdCoreExe.cpp  mqusdSceneGraphImpl.cpp  mqusdSceneGraphImpl.h  mqusdSceneGraphUSD.cpp  mqusdSceneGraphUSD.h
Source/mqusd/Foundation/: CMakeLists.txt  mqusdDocument.cpp  mqusdDocument.h  mqusdDocumentExporter.cpp  mqusdDocumentExporter.h  mqusdDocumentImporter.cpp  mqusdDocumentImporter.h  mqusdSceneGraph.cpp  mqusdSceneGraph.h  mqusdSceneGraphRemote.cpp  mqusdSceneGraphRemote.h  mqusdSerialization.h  mqusdUtils.cpp  mqusdUtils.h
Source/mqusd/Player/: CMakeLists.txt  mqusdPlayer.cpp  (+4 more)
(+34 files in other folders)
