string(REGEX MATCH "([0-9]+)$" MQ_VERSION "${CMAKE_CURRENT_SOURCE_DIR}")
find_package(Metasequoia${MQ_VERSION})

set(MQSDK "mqsdk${MQ_VERSION}")
set(MQCOMMON "mqCommon${MQ_VERSION}")
set(MQABC "mqabc${MQ_VERSION}")
set(MQUSD "mqusd${MQ_VERSION}")
set(MQABC_IMPORT "mqabcImport${MQ_VERSION}")
set(MQUSD_IMPORT "mqusdImport${MQ_VERSION}")
set(MQABC_EXPORT "mqabcExport${MQ_VERSION}")
set(MQUSD_EXPORT "mqusdExport${MQ_VERSION}")

set(DIST_DIR "${CMAKE_INSTALL_PREFIX}/mqusd_${PLATFORM}")
set(DIST_STATION "${DIST_DIR}/Station")
set(DIST_IMPORT "${DIST_DIR}/Import")
set(DIST_EXPORT "${DIST_DIR}/Export")

add_subdirectory(mqsdk)
add_subdirectory(mqCommon)
add_subdirectory(mqabc)
add_subdirectory(mqusd)
add_subdirectory(mqabcImport)
add_subdirectory(mqusdImport)
add_subdirectory(mqabcExport)
add_subdirectory(mqusdExport)